Fix bad alignment in web form on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1197,3 +1197,9 @@ h1, h2, h3, h4, h5,
   color: white !important;
   margin: 0px !important;
 }
+
+@media (max-width: 500px) {
+  #message-text-area {
+    margin-top: 28px !important;
+  }
+}
